== 0.16.1

== 0.16.0

* Enhancements
  * Calendar improvements:
    * Saves checked 'completed' or 'not completed' filters on calendar
    * Displays stickies in the following or preceding month
    * Can filter stickies assigned to the user
  * Project selection dropdowns are now sorted by favorites first
  * Stickies search now allows users to filter unnassigned stickies
  * Email settings page now prompts user if the user navigates away without saving updated settings
  * Tagging improvements:
    * Sticky list page can now filter stickies which contain at least one, or all selected tags
    * Tags can now be given an additional color and description
    * Sticky list page tag filters now only shows tags for the selected project

* Bug Fix
  * Generating a template from the calendar view now correctly updates the selected templates available project frames
  * Daily Stickies Due email no longer includes stickies from projects that have email delivery off

* Refactoring
  * Updated to Rails 3.2.1 and fixed Devise 2.0.0 locales file

== 0.15.3

* Refactoring
  * Removed initializer fix for Rack that is now handled by Contour

== 0.15.2

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Notes RSS feed has moved to Task Tracker
  * Environment files updated to be in sync with Rails 3.2.0

== 0.15.1

* Bug Fix
  * Fixed default colors specified in RGB format from loading properly in the color picker

== 0.15.0

* Enhancements
  * Groups of stickies can now have their due dates shifted by editing a single sticky in the group and selecting either 'incomplete' to shift all other not completed stickies, or 'all' to shift all the stickies in the group
  * Calendar improvements
    * Stickies are now displayed under their tags
    * Stickies can now be displayed or hidden per project
    * Project colors can now be personalized
  * Sticky list page has the following improvements: