@@ -43,6 +43,10 @@ class Sticky < ActiveRecord::Base
   belongs_to :owner, class_name: 'User', foreign_key: 'owner_id'
   has_and_belongs_to_many :tags
 
+  def tag_ids
+    self.tags.order('tags.name').pluck('tags.id')
+  end
+
   def name
     "ID ##{self.id}"
   end
